[package]
name = "micro_http_async"
version = "0.1.2"
authors = ["Dimitri Bobkov <bobkov.dimitri@gmail.com>"]
edition = "2018"
description = "A small, lightweight and hassle-free crate using async to serve web pages or web apis with high performance and extremely low overhead."
readme = "README.md"
keywords = ["async", "http", "performance", "small"]
categories = ["asynchronous", "web-programming", "network-programming"]
license = "MIT"
repository = "https://github.com/dimitribobkov/micro-http-async"
documentation = "https://docs.rs/micro_http_async"

[dependencies]
chunked_transfer = "1.4"
serde_json = "1.0"

[dependencies.futures]
version = "0.3.17"

# Third party async
[dependencies.tokio]
version = "1.11.0" 
features = ["net", "fs", "macros", "io-util", "rt-multi-thread"]

# Serialize stuff
[dependencies.serde]
version = "1.0" 
features = ["derive"]