[package]
name = "micro_http_async"
version = "0.1.4"
authors = ["Dimitri Bobkov <bobkov.dimitri@gmail.com>"]
edition = "2018"
description = "A small, lightweight and hassle-free crate using async to serve web pages or web apis with high performance and extremely low overhead."
readme = "README.md"
keywords = ["async", "http", "performance", "small"]
categories = ["asynchronous", "web-programming", "network-programming"]
license = "MIT"
repository = "https://github.com/dimitribobkov/micro-http-async"
documentation = "https://docs.rs/micro_http_async"

exclude = ["/templates", "/static", ".*"]
include = ["/src"]

[dependencies]
# Allows us to use chunked transfer encoding, which is needed for streaming content
chunked_transfer = "1.4"
# Allows the serialisation of JSON data
serde_json = "1.0"
# We use regex for POST requests... It's strange but it works.
regex = "1"
# TLS support. Needed for HTTPS servers
tokio-rustls = "0.23.2"
rustls = "0.20.2"
rustls-pemfile = "0.2.1"

[dependencies.futures]
version = "0.3.19"

# Third party async
[dependencies.tokio]
version = "1.15.0" 
features = ["net", "fs", "macros", "io-util", "rt-multi-thread"]

# Serialize stuff
[dependencies.serde]
version = "1.0" 
features = ["derive"]